Update Gradle and fix compiler warnings
Mostly fix compiler warnings and Gradle version